# baby_RAG3s

./: Dockerfile  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  README.md  WARP.md  action.py  agent.py  body.json  decision.py  deploy.sh  deployment_guide.md  docker-compose.yml  math_mcp_embeddings.py  measure_latency.py  memory.py  memory_optimization.py  nginx.conf  perception.py  pyproject.toml  requirements.txt  server.py  setup_rag.py  sse.json  team_integration_results.json  team_usage_example.py  test_team_integration.py
babycare_rag/: aws_secrets.py  config.py  core.py  search_engine.py
deploy/: docker-compose.yml
faiss_index/: bm25_corpus.pkl  bm25_index.pkl  doc_index_cache.json  metadata.json
faiss_index_backup/: metadata.json
tests/: online_benchmark.py
